--- a/src/main/webapp/product/add_product.xhtml
+++ b/src/main/webapp/product/add_product.xhtml
@@ -16,77 +16,87 @@
 
 <h:head>
     <title>Add Product</title>
-    <style>
-        .error {
-            color: red
-        }
-    </style>
+    <h:outputStylesheet library="css" name="style.css" type="text/css"/>
 </h:head>
 
 <h:body>
-    <h:form enctype="multipart/form-data">
+    <h:panelGroup styleClass="main">
 
-        <h2>Add Product</h2>
+        <ui:include src="../commons/navigation.xhtml"></ui:include>
 
-        <h:panelGrid columns="3">
+        <h:panelGroup style="margin-top: 6vh">
+            <h:form enctype="multipart/form-data">
 
-            <h:outputLabel>Select Category Name</h:outputLabel>
-            <h:selectOneMenu id="select_menu"
-                             value="#{subCategoryBean.category.catName}"
-                             required="true"
-                             requiredMessage="Select Category Name.">
-                <f:selectItem itemLabel="Select Category" itemValue=""/>
-                <f:selectItems value="#{categoryBean.getCategoryNames()}"/>
-                <f:ajax render="subCat"/>
-            </h:selectOneMenu>
-            <h:message for="select_menu" styleClass="error"/>
+                <h2>Add Product</h2>
 
-            <h:outputLabel>Select Sub Category Name</h:outputLabel>
-            <h:selectOneMenu id="subCat"
-                             value="#{productBean.subCategory.subCatName}"
-                             required="true"
-                             requiredMessage="Select Sub Category Name.">
-                <f:selectItem itemLabel="Select Sub Category" itemValue=""/>
-                <f:selectItems value="#{subCategoryBean.getSubCategoryNamesByCategory()}"/>
-            </h:selectOneMenu>
-            <h:message for="subCat" styleClass="error"/>
+                <h:panelGrid columns="3" style="margin-top: 5px">
 
-            <h:outputLabel>Product Name</h:outputLabel>
-            <h:inputText id="product_name"
-                         value="#{productBean.product.productName}"
-                         required="true"
-                         requiredMessage="Product Name is mandatory."/>
-            <h:message for="product_name" styleClass="error"/>
+                    <h:outputLabel>Select Category Name</h:outputLabel>
+                    <h:selectOneMenu id="select_menu"
+                                     value="#{subCategoryBean.category.catName}"
+                                     required="true"
+                                     requiredMessage="Select Category Name."
+                                     style="width: 20rem">
+                        <f:selectItem itemLabel="Select Category" itemValue=""/>
+                        <f:selectItems value="#{categoryBean.getCategoryNames()}"/>
+                        <f:ajax render="subCat"/>
+                    </h:selectOneMenu>
+                    <h:message for="select_menu" styleClass="error"/>
 
-            <h:outputLabel>Product Qty</h:outputLabel>
-            <h:inputText id="product_qty"
-                         value="#{productBean.product.productQty}"
-                         required="true"
-                         requiredMessage="Product Qty is mandatory."/>
-            <h:message for="product_qty" styleClass="error"/>
+                    <h:outputLabel>Select Sub Category Name</h:outputLabel>
+                    <h:selectOneMenu id="subCat"
+                                     value="#{productBean.subCategory.subCatName}"
+                                     required="true"
+                                     requiredMessage="Select Sub Category Name."
+                                     style="width: 20rem">
+                        <f:selectItem itemLabel="Select Sub Category" itemValue=""/>
+                        <f:selectItems value="#{subCategoryBean.getSubCategoryNamesByCategory()}"/>
+                    </h:selectOneMenu>
+                    <h:message for="subCat" styleClass="error"/>
 
-            <h:outputLabel>Product Price</h:outputLabel>
-            <h:inputText id="product_price"
-                         value="#{productBean.product.productPrice}"
-                         required="true"
-                         requiredMessage="Product Qty is mandatory."/>
-            <h:message for="product_price" styleClass="error"/>
+                    <h:outputLabel>Product Name</h:outputLabel>
+                    <h:inputText id="product_name"
+                                 value="#{productBean.product.productName}"
+                                 required="true"
+                                 requiredMessage="Product Name is mandatory."
+                                 style="width: 20rem"/>
+                    <h:message for="product_name" styleClass="error"/>
 
-            <h:outputLabel>Select Image</h:outputLabel>
-            <h:inputFile id="pro_image"
-                         value="#{productBean.uploadedFile}"
-                         required="true"
-                         requiredMessage="Product Image is mandatory.">
-            </h:inputFile>
-            <h:message for="pro_image" styleClass="error"/>
+                    <h:outputLabel>Product Qty</h:outputLabel>
+                    <h:inputText id="product_qty"
+                                 value="#{productBean.product.productQty}"
+                                 required="true"
+                                 requiredMessage="Product Qty is mandatory."
+                                 style="width: 20rem"/>
+                    <h:message for="product_qty" styleClass="error"/>
 
-            <h:outputLabel>Product Description</h:outputLabel>
-            <h:inputTextarea id="product_description" value="#{productBean.product.productDesc}"/>
-            <h:message for="product_description" styleClass="error"/>
+                    <h:outputLabel>Product Price</h:outputLabel>
+                    <h:inputText id="product_price"
+                                 value="#{productBean.product.productPrice}"
+                                 required="true"
+                                 requiredMessage="Product Qty is mandatory."
+                                 style="width: 20rem"/>
+                    <h:message for="product_price" styleClass="error"/>
 
-            <h:commandButton value="Save" action="#{productBean.addProduct}"/>
-        </h:panelGrid>
-    </h:form>
+                    <h:outputLabel>Select Image</h:outputLabel>
+                    <h:inputFile id="pro_image"
+                                 value="#{productBean.uploadedFile}"
+                                 required="true"
+                                 requiredMessage="Product Image is mandatory.">
+                    </h:inputFile>
+                    <h:message for="pro_image" styleClass="error"/>
+
+                    <h:outputLabel>Product Description</h:outputLabel>
+                    <h:inputTextarea id="product_description" value="#{productBean.product.productDesc}" rows="4"
+                                     style="resize: none; width: 20rem"/>
+                    <h:message for="product_description" styleClass="error"/>
+
+                    <h:commandButton value="Save" action="#{productBean.addProduct}"/>
+                </h:panelGrid>
+            </h:form>
+        </h:panelGroup>
+    </h:panelGroup>
+
 </h:body>
 
 </html>
