--- a/src/main/webapp/product/view_product.xhtml
+++ b/src/main/webapp/product/view_product.xhtml
@@ -16,86 +16,68 @@
 </h:head>
 
 <h:body>
-    <h:form>
+    <h:panelGroup styleClass="main">
+
+        <ui:include src="../commons/navigation.xhtml"></ui:include>
+
         <h:panelGroup styleClass="main">
 
-            <h:panelGroup styleClass="nav_bar">
-                <ul class="nav_left">
-                    <li style="margin-right: 1rem;"><a
-                            href="#{request.contextPath}/product/view_product.xhtml">Home</a></li>
-                    <li style="margin-right: 1rem;"><a
-                            href="#{request.contextPath}/product/add_product.xhtml">Add Product</a></li>
-                    <li style="margin-right: 1rem;"><a
-                            href="#{request.contextPath}/category/add_category.xhtml">Add Category</a></li>
-                    <li><a href="#{request.contextPath}/category/add_sub_category.xhtml">Add Sub Category</a></li>
-                </ul>
-                <h3 class="nav_right">
-                    <h:outputLabel value="Cart:" style="margin-right: 0.3rem"/>
-                    <h:outputText value="#{shoppingCartBean.cartSize} #{shoppingCartBean.item}" id="cart"/>
-                    <h:outputLink style="margin-left: 0.5rem" value="#{request.contextPath}/cart/view_cart.xhtml"
-                                  faces-redirect="true"
-                                  target="_blank">View cart</h:outputLink>
-                </h3>
+            <h:panelGroup styleClass="side_content">
+
+                <h:commandButton value="Filter" style="width: 70px; height: 30px; font-size: 17px">
+                    <f:ajax render="update_products"/>
+                </h:commandButton>
+
+                <h:panelGroup>
+                    <h3>Categories</h3>
+                    <h:panelGroup style="display: inline;">
+                        <ui:repeat value="#{categoryBean.getCategoryNames()}" var="categoryName">
+                            <h:selectManyCheckbox value="#{categoryBean.categorySelected}">
+                                <f:selectItem itemValue="#{categoryName}" itemLabel="#{categoryName}"/>
+                                <f:ajax event="click" listener="#{productBean.selectCategory(categoryName)}"/>
+                            </h:selectManyCheckbox>
+                        </ui:repeat>
+                    </h:panelGroup>
+                </h:panelGroup>
+
+                <h:panelGroup>
+                    <h3>Brand</h3>
+                    <h:panelGroup style="display: inline;">
+                        <ui:repeat value="#{subCategoryBean.getSubCategoryNames()}" var="brandName">
+                            <h:selectManyCheckbox value="#{categoryBean.categorySelected}">
+                                <f:selectItem itemValue="#{brandName}" itemLabel="#{brandName}"/>
+                                <f:ajax listener="#{productBean.selectBrand(brandName)}"/>
+                            </h:selectManyCheckbox>
+                        </ui:repeat>
+                    </h:panelGroup>
+                </h:panelGroup>
+
             </h:panelGroup>
 
-            <h:panelGroup styleClass="main">
+            <h:panelGroup styleClass="products" id="update_products">
 
-                <h:panelGroup styleClass="side_content">
-
-                    <h:commandButton value="Filter" style="width: 70px; height: 30px; font-size: 17px">
-                        <f:ajax render="refresh_product"/>
-                    </h:commandButton>
-
-                    <h:panelGroup>
-                        <h3>Categories</h3>
-                        <h:panelGroup style="display: inline;">
-                            <ui:repeat value="#{categoryBean.getCategoryNames()}" var="categoryName">
-                                <h:selectManyCheckbox value="#{categoryBean.categorySelected}" id="checkbox">
-                                    <f:selectItem itemValue="#{categoryName}" itemLabel="#{categoryName}"/>
-                                    <f:ajax event="click" listener="#{productBean.selectCategory(categoryName)}"/>
-                                </h:selectManyCheckbox>
-                            </ui:repeat>
-                        </h:panelGroup>
-                    </h:panelGroup>
-                    <h:panelGroup>
-                        <h3>Brand</h3>
-                        <h:panelGroup style="display: inline;">
-                            <ui:repeat value="#{subCategoryBean.getSubCategoryNames()}" var="brandName">
-                                <h:selectManyCheckbox value="#{categoryBean.categorySelected}">
-                                    <f:selectItem itemValue="#{brandName}" itemLabel="#{brandName}"/>
-                                    <f:ajax listener="#{productBean.selectBrand(brandName)}"/>
-                                </h:selectManyCheckbox>
-                            </ui:repeat>
-                        </h:panelGroup>
-                    </h:panelGroup>
-
-                </h:panelGroup>
-
-                <h:panelGroup styleClass="products" id="refresh_product">
-
-                    <ui:repeat  var="productItem" value="#{(productBean.getAllProduct().size() !=0)
+                <ui:repeat var="productItem" value="#{(productBean.getAllProduct().size() !=0)
                     ? productBean.getAllProduct() : false}">
-                        <h:panelGrid styleClass="product" columns="1">
-                            <h3>#{productItem.productName}</h3>
+                    <h:panelGrid styleClass="product" columns="1">
+                        <h3>#{productItem.productName}</h3>
 
-                            <h:graphicImage name="#{productItem.productUrl}" library="images" width="250" height="250"/>
+                        <h:graphicImage name="#{productItem.productUrl}" library="images" width="250" height="250"/>
 
-                            <h4>Available: #{productItem.productQty}</h4>
+                        <h4>Available: #{productItem.productQty}</h4>
 
-                            <h3>Price: #{productItem.productPrice}</h3>
+                        <h3>Price: #{productItem.productPrice}</h3>
 
-                            <h:outputText value="#{productItem.productDesc}"/>
+                        <h:outputText value="#{productItem.productDesc}"/>
 
-                            <h:commandButton style="font-size: large; padding: 0.5rem; border: 1px solid darkcyan;
+                        <h:commandButton style="font-size: large; padding: 0.5rem; border: 1px solid darkcyan;
                                              border-radius: 0.5rem"
-                                             value="Add to Cart"
-                                             action="#{shoppingCartBean.addToCart(productItem)}"/>
-                        </h:panelGrid>
-                    </ui:repeat>
-                </h:panelGroup>
+                                         value="Add to Cart"
+                                         action="#{shoppingCartBean.addToCart(productItem)}"/>
+                    </h:panelGrid>
+                </ui:repeat>
             </h:panelGroup>
         </h:panelGroup>
-    </h:form>
+    </h:panelGroup>
 </h:body>
 
 </html>
